[package]
name = "dal"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# soler-entities.workspace = true
entities = { path = "../entities" }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1"
chrono = "0.4.31"
bigdecimal = { version = "0.3", features = ["serde"] }
ethers = "2.0.10"
serde = { version = "1.0", features = ["derive"] }

[dependencies.sea-orm]
features = [
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
    "with-bigdecimal",
]
version = "0.12.2"
